fix: correct spacing

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,3 +1,5 @@
 .container-header {
   margin-bottom: 30px;
+
+  color: #000;
 }
