--- a/src/components/Hours/styles.css
+++ b/src/components/Hours/styles.css
@@ -18,7 +18,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 10px;
+  gap: 7px;
 }
 
 .wrapper-hour button {
