--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 
-  width: 115px;
+  width: 109px;
   height: 75px;
 }
 
